--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,6 +4,9 @@ require Pod::Executable.execute_command('node', ['-p',
     "react-native/scripts/react_native_pods.rb",
     {paths: [process.argv[1]]},
   )', __dir__]).strip
+  use_frameworks! :linkage => :static # I ADDED
+  $RNFirebaseAsStaticFramework = true # I ADDED
+  
 
 platform :ios, min_ios_version_supported
 prepare_react_native_project!
@@ -27,14 +30,14 @@ end
 
 target 'EChat' do
   config = use_native_modules!
-
+  
   use_react_native!(
     :path => config[:reactNativePath],
     # Enables Flipper.
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
-    :flipper_configuration => flipper_config,
+    # :flipper_configuration => flipper_config, # I ADDED-'REMOVED'
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
